2009-12-16  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug introduced with latest MT-Alpha optimization.

	When adding a `swch' before an potentially dependent instruction,
	the `swch' could become the very first non-directive in the
	assembly output. This is not valid, as it must always be preceded
	by an instruction. Hence, remove any `swch' not preceded by an
	instruction.
	
	* tools/bin/spp (pppalpha.filter2): New stage `rmswchbegin'.

2009-12-15  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New MT-Alpha optimization.

	The following was observed during Apple-CORE benchmarking: in many
	"small" threads the operation that use the result of a memory load
	directly follow the load. They will arrive at the pipeline read
	stage without their dependency in most case, and then be
	rescheduled. This wastes one execution cycle per thread. It can be
	avoided in most cases by forcing a thread switch immediately
	before such instructions, so that other threads get a chance to
	execute and the dependency be satisfied by the time the
	instruction goes around the active thread queue.
	
	* tools/bin/spp (pppalpha.addswchll): Also add `swch' *before*
	operations that use the result of a long latency operation (not
	only after).

2009-12-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add support for more performance metrics from simulator.
	
	* lib/include/svp/perf.h, 
	* lib/src/perf.c: Add support for memory counters.

2009-12-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* doc/NEWS.txt: Update list of recent changes.

2009-12-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor `slr' improvements.

	* tools/lib/r-mt-sim.sh.in: Pass -d to simulator when `slr -t' is
	used. Move profile listing code to ...

	* tools/bin/slr.in: ... here. Also output command line with -t. Do
	not require a valid program with -m list.

2009-12-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* tools/lib/Makefile.am: Update profile list. 
